assets/css/tags.css
.tags-section {
  max-width: 60rem;
  margin: 0 auto;
  padding: 1rem;
}
.list-disc {
  list-style-type: disc;
}
.list-inside {
  list-style-position: inside;
}
.list-disc li {
  padding: 4px 0;
}
.count {
  padding: 2px 6px;
  color: #fff;
  border-radius: 4px;
  background-color: var(--c-primary);
}

